Update 01 Bank Customer Churn.ipynb

--- a/01 Bank Customer Churn.ipynb
+++ b/01 Bank Customer Churn.ipynb
@@ -2838,37 +2838,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207bc6a3",
-   "metadata": {},
-   "source": [
-    "### Conclusion: \n",
-    "\n",
-    "All three techniques improved F1 score on validation dataset. However, upsampling resulted to be the best one, so now we will continue working with RandomForest having max_depth=9, n_estimators=40, n_jobs=-1, random_state=12345"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd406854",
-   "metadata": {},
-   "source": [
-    "score_data = {'F1':[0.84, 0.83, 0.90], 'Accuracy':[0.75, 0.73, 0.84]}   \n",
-    "score_data = pd.DataFrame(score_data, index =['Логистическая регрессия', 'Случайный лес', 'LGBM']) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e29f1ccc",
    "metadata": {},
    "source": [
     "# Testing the model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b36f326a",
-   "metadata": {},
-   "source": [
-    "Now we will run the model with the chosen parameters on testing selection  and check the final metrics"
    ]
   },
   {
@@ -2927,12 +2900,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4cca88c8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusion: \n",
+    "\n",
+    "During the validation stage, we saw that all three techniques of addressing dataset class imbalance improved F1-score. However, upsampling resulted to be the best one, so we proceeded to model testing using upsampled dataset with best RandomForest hyperparameters tuned for this dataset: max_depth=9, n_estimators=40, n_jobs=-1, random_state=12345\n",
+    "\n",
+    "As a result, we achieved F1-score=0.60 and ROC-AUC = 0.85 on testing selection"
+   ]
   }
  ],
  "metadata": {
