--- a/Fraud Detection/2025_05_25_credit_card_fraud_analysis.ipynb
+++ b/Fraud Detection/2025_05_25_credit_card_fraud_analysis.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -20,48 +20,36 @@
       },
       "outputs": [],
       "source": [
+        "# Data manipulation and analysis\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.ensemble import GradientBoostingClassifier\n",
+        "# Visualization\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.model_selection import train_test_split, GridSearchCV, KFold, TimeSeriesSplit\n",
-        "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, roc_curve, auc, roc_auc_score, precision_recall_curve, average_precision_score\n",
-        "from sklearn.utils import resample\n",
-        "from scipy.stats import ttest_ind\n",
+        "\n",
+        "# Machine Learning - Models\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier, VotingClassifier, StackingClassifier\n",
+        "\n",
+        "# Machine Learning - Model Selection and Evaluation\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV, KFold, TimeSeriesSplit, RandomizedSearchCV\n",
+        "from sklearn.metrics import (accuracy_score, classification_report, confusion_matrix, roc_curve, auc, \n",
+        "                           roc_auc_score, precision_recall_curve, average_precision_score, ConfusionMatrixDisplay)\n",
+        "\n",
+        "# Data preprocessing and utilities\n",
         "from sklearn.preprocessing import StandardScaler, FunctionTransformer\n",
-        "from sklearn.model_selection import RandomizedSearchCV\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "from sklearn.metrics import ConfusionMatrixDisplay\n",
-        "import os\n",
+        "from sklearn.utils import resample\n",
         "\n",
-        "\n",
+        "# Imbalanced data handling\n",
         "from imblearn.pipeline import Pipeline\n",
         "from imblearn.over_sampling import RandomOverSampler\n",
         "\n",
+        "# Statistical analysis\n",
+        "from scipy.stats import ttest_ind\n",
         "\n",
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "from sklearn.preprocessing import FunctionTransformer\n",
-        "from imblearn.pipeline import Pipeline\n",
-        "from imblearn.over_sampling import RandomOverSampler\n",
-        "from sklearn.ensemble import GradientBoostingClassifier\n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.metrics import average_precision_score\n",
-        "\n",
-        "\n",
-        "import numpy as np\n",
-        "from sklearn.preprocessing import FunctionTransformer\n",
-        "from imblearn.pipeline import Pipeline\n",
-        "from imblearn.over_sampling import RandomOverSampler\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.metrics import average_precision_score\n",
-        "\n",
-        "from sklearn.ensemble import VotingClassifier, StackingClassifier\n"
+        "# System utilities\n",
+        "import os"
       ]
     },
     {
